# petq-chat-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: chat_stream.rs  chat_stream_config.toml  main.rs  memory.rs
