[package]
name = "petq-chat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
axum = { version = "0.7", features = ["tokio", "http1"] }
futures-util = "0.3.30"
tokio-stream = "0.1.15"
futures = "0.3.30"
async-openai = "0.23.4"
mongodb = "3.0.1"
uuid = "1.10.0"

