[package]
name = "petq-chat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
axum = { version = "0.7", features = ["tokio", "http1"] }
futures-util = "0.3.30"
tokio-stream = "0.1.15"
futures = "0.3.30"
async-openai = "0.23.4"
mongodb = "3.0.1"
uuid = "1.10.0"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
async-stream = "0.3.5"
hyper = "1.4.1"
anyhow = "1.0.86"
tower-http = { version = "0.5.2", features = ["cors"] }
http = "1.1.0"
toml = "0.8.19"

